# foxwing

./: .clang-format  .gitignore  CMakeLists.txt
client/: CMakeLists.txt  client.cpp
core/: CMakeLists.txt
core/include/core/: common.hpp  engine.hpp
core/include/core/net/: msg.hpp  msg_types.hpp  net.hpp
core/include/core/platform/: platform.hpp
core/include/core/util/: logger.hpp
core/src/net/: net.cpp
core/src/platform/: platform_linux.cpp  platform_win32.cpp
server/: CMakeLists.txt  ds.cpp  server_main.cpp
src/: CMakeLists.txt  cvar.hpp  logger.hpp  main.cpp  msg.hpp  msg_types.hpp  net_client.hpp  platform.hpp  server.cpp  server.hpp  server_handlers.cpp  settings.cpp  settings.hpp  util.cpp  util.hpp
src/client/: CMakeLists.txt  client_main.cpp
src/common/: CMakeLists.txt  common.hpp
src/server/: CMakeLists.txt  server_main.cpp
